force-app/main/default/objects/Semen_History__c/Semen_History__c.object-meta.xml
<CustomObject>
    <label>Semen History</label>
    <nameField>
        <label>Semen History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Semen History&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>