force-app/main/default/objects/Semen_History__c/fields/Freeze_Medium__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Medium__c</fullName>
    <label>Freeze Medium</label>
    <length>20</length>
    <type>Text</type>
</CustomField>