force-app/main/default/objects/Semen_History__c/fields/Freeze_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freeze Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Semen_History_s</relationshipName>
    <type>Lookup</type>
</CustomField>