force-app/main/default/objects/Semen_History__c/fields/Immotile__c.field-meta.xml
<CustomField>
    <fullName>Immotile__c</fullName>
    <label>Immotile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>