force-app/main/default/objects/Semen_History__c/fields/Post_Thaw_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Concentration__c</fullName>
    <label>Post Thaw Concentration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>