force-app/main/default/objects/Semen_History__c/fields/Post_Thaw_Immotile__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Immotile__c</fullName>
    <label>Post Thaw Immotile</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>