force-app/main/default/objects/Semen_History__c/fields/Post_Thaw_Total_Motile_Count__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Total_Motile_Count__c</fullName>
    <label>Post Thaw Total Motile Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>