force-app/main/default/objects/Semen_History__c/fields/Post_Thaw_Total_Motility__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Total_Motility__c</fullName>
    <label>Post Thaw Total Motility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>