force-app/main/default/objects/Semen_History__c/fields/Related_Semen_Sample__c.field-meta.xml
<CustomField>
    <fullName>Related_Semen_Sample__c</fullName>
    <label>Related Semen Sample</label>
    <referenceTo>Sperm_Sample__c</referenceTo>
    <relationshipLabel>Semen History&apos;s</relationshipLabel>
    <relationshipName>Semen_History_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>