force-app/main/default/objects/Semen_History__c/fields/Straw_Size__c.field-meta.xml
<CustomField>
    <fullName>Straw_Size__c</fullName>
    <label>Straw Size</label>
    <length>5</length>
    <type>Text</type>
</CustomField>