force-app/main/default/objects/Semen_History__c/fields/Total_Motile_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Motile_Count__c</fullName>
    <label>Total Motile Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>