force-app/main/default/objects/Semen_History__c/fields/Total_Motility__c.field-meta.xml
<CustomField>
    <fullName>Total_Motility__c</fullName>
    <label>Total Motility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>