force-app/main/default/objects/Semen_History__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>